Ensure CI uses repository Node version

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,7 @@ jobs:
           checkout-ref: ${{ github.event.pull_request.head.sha || github.sha }}
           cache-prefix: ci
           cache-suffix: ${{ vars.NODE_MODULES_CACHE_BUSTER }}
+          node-version-file: .nvmrc
 
       - name: Verify tool versions
         uses: ./.github/actions/verify-tool-versions
@@ -71,6 +72,7 @@ jobs:
           checkout-ref: ${{ github.event.pull_request.head.sha || github.sha }}
           cache-prefix: ci
           cache-suffix: ${{ vars.NODE_MODULES_CACHE_BUSTER }}
+          node-version-file: .nvmrc
 
       - name: Verify tool versions
         uses: ./.github/actions/verify-tool-versions
@@ -123,6 +125,7 @@ jobs:
           checkout-ref: ${{ github.event.pull_request.head.sha || github.sha }}
           cache-prefix: ci
           cache-suffix: ${{ vars.NODE_MODULES_CACHE_BUSTER }}
+          node-version-file: .nvmrc
 
       - name: Verify tool versions
         uses: ./.github/actions/verify-tool-versions
@@ -160,6 +163,7 @@ jobs:
           checkout-ref: ${{ github.event.pull_request.head.sha || github.sha }}
           cache-prefix: ci
           cache-suffix: ${{ vars.NODE_MODULES_CACHE_BUSTER }}
+          node-version-file: .nvmrc
 
       - name: Verify tool versions
         uses: ./.github/actions/verify-tool-versions
@@ -215,6 +219,7 @@ jobs:
           checkout-ref: ${{ github.event.pull_request.head.sha || github.sha }}
           cache-prefix: ci
           cache-suffix: ${{ vars.NODE_MODULES_CACHE_BUSTER }}
+          node-version-file: .nvmrc
 
       - name: Verify tool versions
         uses: ./.github/actions/verify-tool-versions
@@ -233,6 +238,55 @@ jobs:
           key: nextjs-${{ runner.os }}-${{ hashFiles('pnpm-lock.yaml') }}
           restore-keys: |
             nextjs-${{ runner.os }}-
+
+      - name: Validate runtime versions
+        env:
+          EXPECTED_PNPM: ${{ env.PNPM_VERSION }}
+        run: |
+          set -euo pipefail
+
+          if [ ! -f .nvmrc ]; then
+            echo "Expected .nvmrc file is missing." >&2
+            exit 1
+          fi
+
+          EXPECTED_NODE_RAW="$(cat .nvmrc)"
+          EXPECTED_NODE="$(echo "$EXPECTED_NODE_RAW" | tr -d '\n\r[:space:]')"
+          EXPECTED_NODE="${EXPECTED_NODE#v}"
+
+          if [ -z "$EXPECTED_NODE" ]; then
+            echo "Unable to determine the expected Node.js version from .nvmrc." >&2
+            exit 1
+          fi
+
+          ACTUAL_NODE_RAW="$(node --version)"
+          ACTUAL_NODE="${ACTUAL_NODE_RAW#v}"
+
+          if [[ "$EXPECTED_NODE" == *.* || "$EXPECTED_NODE" == *-* ]]; then
+            if [ "$ACTUAL_NODE" != "$EXPECTED_NODE" ]; then
+              echo "Node.js version mismatch. Expected $EXPECTED_NODE but found $ACTUAL_NODE." >&2
+              exit 1
+            fi
+          else
+            ACTUAL_NODE_MAJOR="${ACTUAL_NODE%%.*}"
+            if [ "$ACTUAL_NODE_MAJOR" != "$EXPECTED_NODE" ]; then
+              echo "Node.js version mismatch. Expected $EXPECTED_NODE.x but found $ACTUAL_NODE." >&2
+              exit 1
+            fi
+          fi
+
+          if [ -z "$EXPECTED_PNPM" ]; then
+            echo "Expected pnpm version is not defined." >&2
+            exit 1
+          fi
+
+          ACTUAL_PNPM="$(pnpm --version)"
+          if [ "$ACTUAL_PNPM" != "$EXPECTED_PNPM" ]; then
+            echo "pnpm version mismatch. Expected $EXPECTED_PNPM but found $ACTUAL_PNPM." >&2
+            exit 1
+          fi
+
+          echo "Using Node.js $ACTUAL_NODE_RAW and pnpm $ACTUAL_PNPM."
 
       - name: Build
         run: pnpm run build
@@ -323,6 +377,7 @@ jobs:
           checkout-ref: ${{ github.event.pull_request.head.sha || github.sha }}
           cache-prefix: ci
           cache-suffix: ${{ vars.NODE_MODULES_CACHE_BUSTER }}
+          node-version-file: .nvmrc
 
       - name: Verify tool versions
         uses: ./.github/actions/verify-tool-versions
