fix: publish static site via gh-pages workflow

--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -25,7 +25,7 @@ jobs:
     name: Build static site
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
       actions: write
     env:
       NEXT_TELEMETRY_DISABLED: '1'
@@ -38,9 +38,6 @@ jobs:
           checkout-fetch-depth: 0
           cache-suffix: ${{ vars.NODE_MODULES_CACHE_BUSTER }}
 
-      - name: Setup Pages
-        uses: actions/configure-pages@983d7736d9b0ae728b81ab479565c72886d7745b # v5.0.0
-
       - name: Verify prompts registry
         run: pnpm run verify-prompts
 
@@ -50,36 +47,10 @@ jobs:
           set -euo pipefail
           pnpm exec tsx scripts/validate-deploy-env.ts
 
-      - name: Export static site
+      - name: Build and publish static site
         shell: bash
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           set -euo pipefail
-          export DEPLOY_ARTIFACT_ONLY=true
-          # The deploy script derives the correct base path for project pages and
-          # clears it for user/org pages, so no extra env wiring is required here.
           pnpm run deploy
-
-      - name: Upload static artifact
-        uses: actions/upload-pages-artifact@7b1f4a764d45c48632c6b24a0339c27f5614fb0b # v4.0.0
-        with:
-          path: ./out
-
-  deploy:
-    name: Deploy to GitHub Pages
-    needs: build
-    if: needs.build.result == 'success'
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      pages: write
-      id-token: write
-    environment:
-      name: Production
-      url: ${{ steps.deployment.outputs.page_url }}
-    steps:
-      - name: Setup Pages
-        uses: actions/configure-pages@983d7736d9b0ae728b81ab479565c72886d7745b # v5.0.0
-
-      - name: Deploy
-        id: deployment
-        uses: actions/deploy-pages@af48c8d784fbb3eccd0f19f41da3b3c25c2ba234 # v4.0.7
