--- a/.github/actions/setup-node-project/action.yml
+++ b/.github/actions/setup-node-project/action.yml
@@ -26,6 +26,9 @@ inputs:
   checkout-fetch-depth:
     description: "Depth used when checking out the repository"
     default: "2"
+  skip-checkout:
+    description: "Skip the checkout step (requires repository to already be present)"
+    default: "false"
 
 outputs:
   package-manager:
@@ -48,6 +51,7 @@ runs:
   using: "composite"
   steps:
     - name: Checkout
+      if: ${{ inputs['skip-checkout'] != 'true' }}
       uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.2.1
       with:
         fetch-depth: "${{ inputs['checkout-fetch-depth'] }}"
