--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -32,11 +32,18 @@ jobs:
       BASE_PATH: Planner
       NEXT_PUBLIC_BASE_PATH: /Planner
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.2.1
+        with:
+          fetch-depth: 0
+          ref: ${{ github.event.pull_request.head.sha || github.sha }}
+
       - uses: ./.github/actions/setup-node-project
         with:
           checkout-ref: ${{ github.event.pull_request.head.sha || github.sha }}
           checkout-fetch-depth: 0
           cache-suffix: ${{ vars.NODE_MODULES_CACHE_BUSTER }}
+          skip-checkout: 'true'
 
       - name: Verify prompts registry
         run: pnpm run verify-prompts
