--- a/.github/workflows/workflow-lint.yml
+++ b/.github/workflows/workflow-lint.yml
@@ -31,10 +31,17 @@ jobs:
       contents: read
       pull-requests: write
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.2.1
+        with:
+          fetch-depth: 2
+          ref: ${{ github.event.pull_request.head.sha || github.sha }}
+
       - name: Setup Node project
         uses: ./.github/actions/setup-node-project
         with:
           cache-suffix: ${{ vars.NODE_MODULES_CACHE_BUSTER }}
+          skip-checkout: 'true'
 
       - name: actionlint (all workflows)
         uses: reviewdog/action-actionlint@0b71b30a47a15c4d849868cca394fb656f1cf657 # v1.67.0
