Prevent deploy workflow loop on pages bot

--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -22,6 +22,7 @@ permissions:
 
 jobs:
   build:
+    if: github.actor != 'github-pages[bot]'
     name: Build static site
     runs-on: ubuntu-latest
     permissions:
