--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "generate-themes": "tsx scripts/generate-themes.ts",
     "generate-tokens": "tsx scripts/generate-tokens.ts",
     "build": "tsx scripts/run-next.ts build",
+    "export": "cross-env DEPLOY_ARTIFACT_ONLY=true tsx scripts/deploy-gh-pages.ts",
     "prebuild:analyze": "pnpm run prebuild && node --input-type=module -e \"import { mkdirSync, rmSync } from 'node:fs'; import { resolve } from 'node:path'; const fallback = 'docs/bundle-report'; const raw = (process.env.BUNDLE_ANALYZE_OUTPUT_DIR ?? '').trim(); const target = raw.length > 0 ? raw : fallback; const absolute = resolve(target); rmSync(absolute, { recursive: true, force: true }); mkdirSync(absolute, { recursive: true });\"",
     "build:analyze": "cross-env ANALYZE=true BUNDLE_ANALYZE_OUTPUT_DIR=docs/bundle-report tsx scripts/run-next.ts build",
     "postbuild:analyze": "node --input-type=module -e \"import { cpSync, existsSync, mkdirSync, rmSync } from 'node:fs'; import { resolve } from 'node:path'; const fallback = 'docs/bundle-report'; const raw = (process.env.BUNDLE_ANALYZE_OUTPUT_DIR ?? '').trim(); const target = raw.length > 0 ? raw : fallback; const absolute = resolve(target); const source = resolve('.next', 'analyze'); if (existsSync(source)) { rmSync(absolute, { recursive: true, force: true }); mkdirSync(absolute, { recursive: true }); cpSync(source, absolute, { recursive: true }); console.log(`Bundle analysis artifacts saved to ${target}`); } else { console.warn('Bundle analyzer output not found at', source); }\"",
@@ -45,7 +46,7 @@
     "postinstall": "node scripts/postinstall.mjs",
     "prepare": "node scripts/prepare.mjs",
     "launch": "tsx scripts/launcher.ts",
-    "deploy:pages": "tsx scripts/deploy-gh-pages.ts",
+    "deploy:pages": "cross-env DEPLOY_ARTIFACT_ONLY=false tsx scripts/deploy-gh-pages.ts",
     "deploy": "pnpm run deploy:pages",
     "deploy:npm": "npm run deploy:pages",
     "report:summary": "node scripts/report-summary.mjs",
