--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "packageManager": "pnpm@10.13.1",
   "engines": {
-    "node": ">=22",
-    "pnpm": "10.13.1"
+    "node": ">=20.15 <21",
+    "pnpm": ">=9.0.0"
   },
   "name": "noxis-planner",
   "private": true,
