chore: harden ai configuration defaults

--- a/.env.example
+++ b/.env.example
@@ -20,12 +20,14 @@ NEXT_PUBLIC_UI_GLITCH_LANDING="true"
 
 # Safe mode gates experimental AI-assisted tooling on both the server and client.
 # Enable this when integrating external AI providers to keep production paths locked down.
-SAFE_MODE="false"
-NEXT_PUBLIC_SAFE_MODE="false"
+# Production deployments should leave safe mode enabled so strict token budgets stay enforced.
+SAFE_MODE="true"
+NEXT_PUBLIC_SAFE_MODE="true"
 
 # Override AI prompt defaults when integrating providers with different limits.
+# A conservative token estimator (3 characters ≈ 1 token) helps avoid truncating responses.
 AI_MAX_INPUT_LENGTH="16000"
-AI_TOKENS_PER_CHAR="4"
+AI_TOKENS_PER_CHAR="3"
 
 # Browser Sentry configuration. Provide DSN + environment to enable monitoring in production.
 NEXT_PUBLIC_SENTRY_DSN="https://examplePublicKey.ingest.sentry.io/1234567"
