--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -62,6 +62,17 @@ jobs:
           node-version: "20"
           cache: ${{ steps.detect-package-manager.outputs.manager }}
           cache-dependency-path: ${{ steps.detect-package-manager.outputs.lockfile }}
+      - name: Determine pnpm version
+        if: ${{ steps.detect-package-manager.outputs.manager == 'pnpm' }}
+        id: pnpm-version
+        run: |
+          VERSION=$(node -p "require('./package.json').packageManager?.split('@')[1] ?? ''")
+          echo "value=$VERSION" >>"$GITHUB_OUTPUT"
+      - name: Setup pnpm
+        if: ${{ steps.detect-package-manager.outputs.manager == 'pnpm' }}
+        uses: pnpm/action-setup@v4
+        with:
+          version: ${{ steps.pnpm-version.outputs.value || 'latest' }}
       - name: Enable Corepack
         if: ${{ steps.detect-package-manager.outputs.manager == 'pnpm' }}
         run: corepack enable
