fix: trim planner task inputs and document ai guardrails

--- a/.env.example
+++ b/.env.example
@@ -28,6 +28,12 @@ NEXT_PUBLIC_SAFE_MODE="true"
 # A conservative token estimator (3 characters ≈ 1 token) helps avoid truncating responses.
 AI_MAX_INPUT_LENGTH="16000"
 AI_TOKENS_PER_CHAR="3"
+# Safe mode token guardrails enforced server-side. Increase only when providers support
+# larger contexts and you can guarantee downstream handlers can process the larger payloads.
+SAFE_MODE_TOKEN_CEILING="8000"
+SAFE_MODE_RESPONSE_RESERVE="512"
+SAFE_MODE_TEMPERATURE_CEILING="0.4"
+SAFE_MODE_MAX_TOOL_CALLS="1"
 
 # Browser Sentry configuration. Provide DSN + environment to enable monitoring in production.
 NEXT_PUBLIC_SENTRY_DSN="https://examplePublicKey.ingest.sentry.io/1234567"
