--- a/.github/workflows/codex-autofix.yml
+++ b/.github/workflows/codex-autofix.yml
@@ -14,7 +14,9 @@ permissions:
 
 jobs:
   autofix:
-    if: github.event.workflow_run.conclusion == 'failure'
+    if: >-
+      github.event.workflow_run.conclusion == 'failure' &&
+      github.event.workflow_run.head_repository.fork != true
     name: Run Codex autofix
     runs-on: ubuntu-latest
 
