docs: clarify workflow job documentation

--- a/.github/workflows/codex-autofix.yml
+++ b/.github/workflows/codex-autofix.yml
@@ -13,7 +13,7 @@ permissions:
   actions: read
 
 jobs:
-  # Invokes Codex to attempt automatic fixes when the CI workflow fails.
+  # Triggers Codex to draft automated fixes whenever the CI workflow finishes with a failure.
   autofix:
     if: >-
       github.event.workflow_run.conclusion == 'failure' &&
