--- a/.github/workflows/workflow-lint.yml
+++ b/.github/workflows/workflow-lint.yml
@@ -25,7 +25,7 @@ permissions:
   contents: read
 
 jobs:
-  # Lints workflow files to keep automation definitions consistent and valid.
+  # Runs actionlint and yamllint to keep GitHub workflow definitions valid and stylistically consistent.
   lint:
     runs-on: ubuntu-latest
     permissions:
