--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "packageManager": "pnpm@10.13.1",
+  "packageManager": "pnpm@10.18.2",
   "engines": {
-    "node": ">=22 <23",
-    "pnpm": ">=9.0.0"
+    "node": "^20.17.0 || >=22 <23",
+    "pnpm": ">=10.18.2"
   },
   "name": "noxis-planner",
   "private": true,
